# aerial-clustering

./: README.md  main.ipynb  pyproject.toml
.github/workflows/: python-package.yml
src/aerial_clustering/: __init__.py  kmeans.py  utils.py
tests/: test_kmeans.py
