[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aerial-clustering"
version = "0.0.1"
authors = [{ name = "Al Gifari", email = "jihar.akakom14@gmail.com" }]
description = "A library for clustering aerial data points based on distance"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.19.0"]

[project.urls]
"Homepage" = "https://github.com/jiharal/aerial-clustering"
"Bug Tracker" = "https://github.com/jiharal/aerial-clustering/issues"
